# katheryne

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/api/: mod.rs  router.rs
src/application/commands/: create_client_command.rs  create_order_command.rs  create_provider_command.rs  create_todo_command.rs  delete_client_command.rs  delete_order_command.rs  delete_provider_command.rs  delete_todo_command.rs  mod.rs  update_todo_command.rs
src/application/commands/request/: mod.rs
src/application/queries/: get_all_query.rs  get_all_todos_query.rs  get_todo_by_id_query.rs  mod.rs
src/domain/models/: client.rs  mod.rs  order.rs  provider.rs  todo.rs  user.rs
src/infrastructure/data/db_context/: surreal_context.rs
src/infrastructure/data/repositories/: mod.rs  repository.rs  todo_repository.rs
