[package]
name = "katheryne"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum-extra = { version = "0.9.2", features = ["typed-header"] }
chrono = { version = "0.4.35", features = ["serde", "clock"] }
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
rand = "0.9.0-alpha.0"
axum = "0.7.4"
surrealdb = "1.3.1"
tokio = {version = "1.36.0", features = ["full"]}
tower-http = {version = "0.5.2", features = ["cors"]}
